[package]
name = "sonar_config_helper"
version = "1.0.1"
edition = "2021"
authors = ["ArctixTheFox"]
repository = "https://github.com/ArctixTheFox/sonar_config_helper"
homepage = "https://github.com/ArctixTheFox/sonar_config_helper"
license = "MIT"
readme = "README.md"
#documentation = ""
description = "A command-line tool to help with Sonar configurations"

[dependencies]
base64 = "0.22.0"
clap = { version = "4.5.1", features = ["derive"] }
custom_error = "1.9.2"
jsonxf = "1.1.1"
regex = "1.10.3"
tiny_http = "0.12.0"
ureq = "2.9.6"
